# ohmk

./: .gitignore  Cargo.toml  README.md  build  install
assets/: demo.tape
shell/: key-bindings.bash  key-bindings.nu  key-bindings.zsh
src/: config.rs  main.rs
