[package]
name = "ohmk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate-config"

[dependencies]
confy = "0.6.1"
crossterm = "0.27.0"
derive_setters = "0.1.6"
fuzzy-matcher = "0.3.7"
home = "0.5.9"
nanoid = "0.4.0"
ratatui = "0.28.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.201"
serde_json = "1.0.116"
tui-textarea = { version = "0.4.0", features = ["search"] }
